# Polyglot-System

./: Dockerfile  README.md  binding.gyp  package.json
cpp-module/include/: crypto.h
cpp-module/src/: main.cpp
go-module/: main.go
python-module/: main.py
rust-module/: Cargo.toml
rust-module/src/: main.rs
src/: index.js
wasm-module/: math.c
