[package]
name = "rust_module"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
sha2 = "0.10"
blake3 = "0.4"
aes = "0.8"
rsa = "0.9"
ed25519-dalek = "2.0"
curve25519-dalek = "4.0"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
redis = { version = "0.23", features = ["tokio-comp"] }
kafka = "0.9"
tonic = "0.10"
prost = "0.12"
warp = "0.3"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"
lazy_static = "1.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
hex = "0.4"
bincode = "1.3"
lz4 = "1.24"
zstd = "0.13"
flate2 = "1.0"
image = "0.24"
ndarray = "0.15"
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
tch = "0.13"
linfa = "0.7"
smartcore = "0.3"

[lib]
name = "rust_module"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust_module"
path = "src/main.rs"